--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,11 @@
     <app-header></app-header>
 </div>
 <br>
-<mat-divider></mat-divider>
-<h3>sad</h3>
+<div class="container">
+   <div class="marginInfo">
+      <input class = "inpUser" type="email" placeholder="Correo electronico o usuario">
+      <br>
+      <input class = "inpPass" type="password" placeholder="Contraseña">
+   </div>
+
+</div>
