--- a/src/app/components/layout/header/header.component.css
+++ b/src/app/components/layout/header/header.component.css
@@ -4,7 +4,7 @@
     text-align: center;
     font-family: 'Montserrat', sans-serif;
     font-size: 1em;
-    padding: 0.1em;
+    padding: 0.3em;
 }
 
 .header a{
@@ -14,4 +14,5 @@
 .logo{
     align-content: center;
     margin-top: 1.5em;
+    text-align:center;
 }
