--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -16,14 +16,37 @@
  .inpUser{
      width: 35em;
      height: 2em;
-     margin-top: 15%;
  }
  .inpPass{
      width: 35em;
      height: 2em;
-     margin-top: 6%;
  }
  .marginInfo{
      margin-left: 18em;
  }
+ h2{
+    text-align: center;
+    font-family: 'Fjalla One', sans-serif;
+    margin-top: 5%;
+    font-size: 3.5em;
+    color: white;
+ }
+ .user{
+    font-family: 'Fjalla One', sans-serif;
+    font-size: 1.2em;
+    margin-top: 5em;
 
+ }
+ .pass{
+    font-family: 'Fjalla One', sans-serif;
+    font-size: 1.2em;
+    margin-top: 4em;
+ }
+.btnLogin{
+    color: black;
+    background-color: cyan;
+    margin-top: 4em;
+    margin-left: 10.5em;
+    font-size: 1.2em;
+    margin-bottom: 5%;
+}
