--- a/src/app/components/layout/header/header.component.css
+++ b/src/app/components/layout/header/header.component.css
@@ -1,18 +1,21 @@
 .header{
     background: #333;
     color: #fff;
-    text-align: center;
     font-family: 'Montserrat', sans-serif;
     font-size: 1em;
     padding: 0.3em;
+    text-align: left;
 }
 
 .header a{
     color: #fff;
     text-decoration: none;
+    padding-left: 2%;
 }
 .logo{
-    align-content: center;
     margin-top: 1.5em;
-    text-align:center;
+    margin-left: 11.5em;
+}
+h1{
+    margin-left: 3em;
 }
