elimiacion titulo y avance login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,6 @@
     <app-header></app-header>
 </div>
 <br>
-<h2>Inicio de sesion</h2>
 
 <div class="container">
    <div class="marginInfo">
@@ -16,5 +15,9 @@
       <input class = "inpPass" type="password">
       <br>
       <button mat-button class="btnLogin">Iniciar Sesion</button>
+      <p class="crearcuenta">
+         <label>¿No tenés cuenta?</label>
+         <a href="facebook.com" style="margin-left: 0.5em" c>Crear Cuenta</a>
+      </p>
    </div>
 </div>
