--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -34,7 +34,7 @@
  .user{
     font-family: 'Fjalla One', sans-serif;
     font-size: 1.2em;
-    margin-top: 5em;
+    margin-top: 4em;
 
  }
  .pass{
@@ -45,8 +45,12 @@
 .btnLogin{
     color: black;
     background-color: cyan;
-    margin-top: 4em;
-    margin-left: 10.5em;
-    font-size: 1.2em;
+    margin-top: 2em;
+    margin-left: 10em;
+    font-size: 1.3em;
+    font-family: 'Fjalla One', sans-serif;
+}
+.crearcuenta{
     margin-bottom: 5%;
+    margin-top: 1.2em;
 }
