routing en proceso - no ejecutable

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
       <button mat-button class="btnLogin">Iniciar Sesion</button>
       <p class="crearcuenta">
          <label>¿No tenés cuenta?</label>
-         <a href="facebook.com" style="margin-left: 0.5em" c>Crear Cuenta</a>
+         <a routerLink = "/search" routerLinkActive = "active" style="margin-left: 0.5em" >Crear Cuenta</a>
       </p>
    </div>
 </div>
