--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,6 @@
 <div>
     <app-header></app-header>
 </div>
-<br>
-
 <div class="container">
    <div class="marginInfo">
       <p class="user">Correo electronico o usuario</p>
@@ -17,7 +15,7 @@
       <button mat-button class="btnLogin">Iniciar Sesion</button>
       <p class="crearcuenta">
          <label>¿No tenés cuenta?</label>
-         <a routerLink = "/search" routerLinkActive = "active" style="margin-left: 0.5em" >Crear Cuenta</a>
+         <a routerLink = '/home' routerLinkActive = "active" style="margin-left: 0.5em" >Crear Cuenta</a>
       </p>
    </div>
 </div>
