--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
       <button mat-button class="btnLogin">Iniciar Sesion</button>
       <p class="crearcuenta">
          <label>¿No tenés cuenta?</label>
-         <a routerLink = '/home' routerLinkActive = "active" style="margin-left: 0.5em" >Crear Cuenta</a>
+         <a href="www.google.com"  style="margin-left: 0.5em" >Crear Cuenta</a>
       </p>
    </div>
 </div>
