form e input buscador

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,1 +1,14 @@
 <h1 style="color: white; text-align: center;">Busque funciones</h1>
+<mat-card class="info-container">
+    <br>
+    <mat-form-field class="infopelicula">
+        <mat-select class="selpelicula" placeholder="Seleccione una pelicula">
+            <mat-option value="IT2">IT 2</mat-option>
+        </mat-select>
+    </mat-form-field> 
+    <mat-form-field class="infodia">
+            <mat-select class="seldia" placeholder="Seleccione una fecha">
+                <mat-option value="14022019">14/02/2019</mat-option>
+            </mat-select>
+        </mat-form-field>           
+</mat-card>
