--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -1,16 +1,28 @@
 
 .info-container{
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
-    height: 20em;
+    height: 60%;
+    margin-bottom: 5%;
     margin-top: 4em;
     color:black;
+    border-radius: 0.5em !important;
+    border: 0.3em solid grey;
+    background-color: black;
 }
 .it2-poster{
+
+}
+p{
+    font-size: 1.2em;
     font-family: 'Oswald', sans-serif;
     color:white;
-    width: 10em;
+
+
 }
-.it2-p{
-    font-size: 1.5em;
+a{
+    display: inline-block;
+    margin-left: 8em;
+    text-align: center;
+    margin-top: 2em;
 }
