--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,7 +1,7 @@
 <style>
     @import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
 </style>
-<div class="info-container">
+<mat-card class="info-container">
      <a class="it2-poster" [routerLink]="['/create-account']">
         <img src="assets/img/IT2_poster.jpg">
         <p class="it2-p">IT 2</p>
@@ -10,5 +10,13 @@
         <img style="width: 210px; height: 300px;" src="assets/img/HP_poster.jpg">
         <p class="hp-p">Harry Potter y la piedra filosofal</p>
     </a>
-</div>
+    <a class="elresplandor-poster" [routerLink]="['/create-account']">
+        <img style="width: 210px; height: 300px;" src="assets/img/ELRESPLANDOR_poster.jpg">
+        <p class="elresplandor-p">El resplandor</p>
+    </a>
+    <a class="unacuestiondetiempo-poster" [routerLink]="['/create-account']">
+        <img style="width: 210px; height: 300px;" src="assets/img/UNACUESTIONDETIEMPO_poster.jpg">
+        <p class="hp-p">Una cuestion de tiempo</p>
+    </a>
+</mat-card>
 
