movie selected diseno, falta la parte logica y automatizar

--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -2,8 +2,10 @@
     @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 </style>
 <header class="header">
-    <div></div>
-    <img class="logo" src="assets/img/logo.png" width="90px" height="70px">
+    <a class="home" [routerLink]="['/search']" >
+        <img class="logo" src="assets/img/logo.png" width="90px" height="70px">
+        
+    </a>   
     <h1>Cinnemon</h1>
     <div></div>
 </header>
