--- a/src/app/components/layout/header/header.component.css
+++ b/src/app/components/layout/header/header.component.css
@@ -1,3 +1,4 @@
+
 .header{
     background: #333;
     color: #fff;
@@ -7,7 +8,7 @@
     text-align: left;
 }
 
-.header a{
+.home{
     color: #fff;
     text-decoration: none;
 }
