db connected, trying adding tasks as test, just working with service rn

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -4,7 +4,7 @@
 <a class="logout" [routerLink]="['/login']" >Cerrar sesion</a>
 <mat-card class="info-container">
     <div class="movies-container">
-         <a (click)="it2picked()" class="it2-poster" [routerLink]="['/selected-movie']">
+         <a class="it2-poster" [routerLink]="['/selected-movie']">
             <img src="assets/img/IT2_poster.jpg">
             <p class="it2-p">IT 2</p>
          </a>
