--- a/src/app/selected-movie/selected-movie.component.css
+++ b/src/app/selected-movie/selected-movie.component.css
@@ -4,38 +4,62 @@ h1{
     margin-left: 15%;
     margin-top: -30%;
 }
-.select-fechas{
+.select-fecha{
+    margin-top: 20%;
     background-color: white;
-    width: 30%;
-    margin-left: 10%;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+}
+.select-funcion{
+    margin-top: 15%;
+    background-color: white;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+}
+.select-hora{
+    margin-top: 15%;
+    background-color: white;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+}
+.btn-select{
+    margin-top: 20%;
+    background-color: grey;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1em;
+}
+
+
+.lbhorario{
+    text-align: center;
+    color: white;
+    font-family: 'Oswald', sans-serif;
+    font-size: 2em;
+}
+.title{
     margin-top: 5%;
 }
 .movie-container{
     margin-top: 5%;
-    width: 45%;
+    width: 50%;
     height: 30%;
-    margin-left:50%;
     margin-bottom: 5%;
 }
 .movie-img{
-    width: 225px;
-    height: 350px;
     margin-left: 2%;
-    max-width: 225px;
-    max-height: 350px;
     margin-top: 5%;
 }
 .movie{
-    margin-left: 45%;
-    margin-top: -65%;
+    margin-left: 55%;
     font-family: 'Oswald', sans-serif;
     font-size: 3em;
 }
 .movie-summary{
-    margin-left: 45%;
-    width: 55%;
+    margin-left: 55%;
+    width: 45%;
     font-family: 'Montserrat', sans-serif;
     font-size: 0.8em;
+    margin-right: 2%;
 }
 .movie-info{
     margin-left: 2.5%;
