--- a/src/app/selected-movie/selected-movie.component.html
+++ b/src/app/selected-movie/selected-movie.component.html
@@ -1,8 +1,27 @@
 <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-<mat-card class="movie-container">
-   <div></div>
-    <img class="movie-img" src="assets/img/IT2_poster.jpg">
+<div fxLayout="column" fxFlex="10%" fxLayoutGap="0"></div>
+<div class="title" fxLayout="column" fxFlex=25% fxLayoutWrap>
+    <mat-label class="lbhorario">Seleccione una función</mat-label>
+    <mat-select class="select-fecha" placeholder="Fecha">
+        <mat-option [value]="14/11/2019">14/11/2019</mat-option>
+        <mat-option [value]="23/05/2018">23/05/2018</mat-option>
+    </mat-select>
+    <mat-select class="select-funcion" placeholder="Función" >
+        <mat-option>2D IT 2 SUBTITULADO</mat-option>
+        <mat-option>2D IT 2 CASTELLANO</mat-option>
+        <mat-option>3D IT 2 CASTELLANO</mat-option>
+    </mat-select>
+    <mat-select class="select-hora" placeholder="Horario">
+        <mat-option>11:30 hs</mat-option>
+    </mat-select>
+    <button mat-button class="btn-select">Seleccionar</button>
+</div>
+<div fxLayout="column" fxFlex="10%">
+
+</div>
+<mat-card class="movie-container" fxLayout="column"  fxFlex="50%" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0">
+    
     <h2 class="movie">IT 2</h2>
     <p  class= "movie-summary"> El mal resurge en Derry con IT CAPÍTULO DOS: el director Andy Muschietti reúne al Club de los Perdedores (jóvenes y adultos) y vuelve al momento en que todo comenzó. El film es la continuación de Muschietti para "IT (Eso)", el masivo éxito taquillero a nivel mundial, aclamado por las críticas, que estrenó en 2017 y acumuló un total bruto de más de USD 700 millones en todo el mundo. "IT (Eso)" redefine y transciende el género; así, se convirtió en parte de la cultura y también en la película de horror con mayores ganancias en la historia del cine. Dado que el mal vuelve al pueblo de Derry, Maine, cada 27 años, "IT CAPÍTULO DOS" vuelve a reunir a los personajes (que se separaron hace mucho tiempo) ya de adultos, casi tres décadas después de los eventos de la primera película.</p>
     <p class="movie-info">
@@ -15,14 +34,10 @@
         Director: Andy Muschietti
     </p>
 </mat-card>
-<div>
-    <h1>Seleccione una fecha</h1>
-    <div></div>
-    <mat-select class="select-fechas" placeholder="14/11/2019">
-        <mat-option [value]="14/11/2019">14/11/2019</mat-option>
-        <mat-option [value]="23/05/2018">23/05/2018</mat-option>
-    </mat-select>
-</div>
+
+
+
+
 <div></div>
 
 
