--- a/src/app/test-rest-api/test-rest-api.component.html
+++ b/src/app/test-rest-api/test-rest-api.component.html
@@ -5,4 +5,28 @@
             <button type="submit" class="btn btn-primary">Add Task</button>
         </span>
     </div>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Estado</th>
+                <th>Titulo</th>
+                <th>Operaciones</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let task of tasks">
+                <td>
+                    <input  type="checkbox" [checked]="task.isDone" (click)="updateTask(task)">
+                </td>
+                <td style="color:white;">
+                    {{ task.title }}
+                </td>
+                <td>
+                    <button class="btn btn-danger" (click)="deleteTask(task._id)">
+                        Eliminar
+                    </button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </form>
