--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,7 +9,7 @@
        <button [routerLink]="['/search']" mat-button class="btnLogin">Iniciar Sesion</button>
        <p class="crearcuenta">
           <label>¿No tenés cuenta?</label>
-          <a [routerLink]="['/create-account']"  style="margin-left: 0.5em" >Crear Cuenta</a>
+          <a [routerLink]="['/create-account']"  style="margin-left: 0.5em" >Crear cuenta</a>
 
        </p>
     </div>
