--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,7 +1,7 @@
 <style>
     @import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
 </style>
-<a class="logout" [routerLink]="['/login']" >Cerrar sesion</a>
+<button mat-button class="logout" [routerLink]="['/login']" >Cerrar sesion</button>
 <mat-card class="info-container">
     <div class="movies-container">
          <a class="it2-poster" [routerLink]="['/selected-movie']">
