--- a/src/app/create-account/create-account.component.html
+++ b/src/app/create-account/create-account.component.html
@@ -8,7 +8,7 @@
             <mat-card class="data-form">
                 <label class="title">Registre una cuenta nueva</label>
                 <input type="text" name="user" [(ngModel)]="user" class="form-control inpUser" placeholder="Usuario">
-                <input type="text" name="pass" [(ngModel)]="pass" class="form-control inpPass" placeholder="Contraseña">
+                <input type="password" name="pass" [(ngModel)]="pass" class="form-control inpPass" placeholder="Contraseña">
                 <button mat-button type="submit" class="btnCrearCuenta">Registrarse</button>
             </mat-card>
         </mat-form-field>
