--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
       @import url('https://fonts.googleapis.com/css?family=Fjalla+One&display=swap');
 </style>
 <app-header></app-header>
-<router-outlet> </router-outlet>
+<router-outlet>
+</router-outlet>
