--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -2,7 +2,7 @@
     @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 </style>
 <header class="header">
-    <a class="home" [routerLink]="['/search']" >
+    <a class="home">
         <img class="logo" src="assets/img/logo.png" width="90px" height="70px">
         
     </a>   
